Neue Datei-Struktur, erste Gehversuche mit internem Aufbau der Typen

--- a/haskelltracer.cabal
+++ b/haskelltracer.cabal
@@ -5,4 +5,4 @@ Build-Depends: base, parsec, deepseq, parallel
 Build-Type: Simple
 
 Executable: haskelltracer
-Main-is: src/haskelltracer.hs
+Main-is: src/Main.hs
